--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ wp-content/themes/index.php
 wp-content/plugins/gravityforms
 wp-content/plugins/wordpress-importer
 wp-content/plugins/index.php
+wp-admin
+wp-includes
